deploy: 031c08346a41ca8ef11b5071e988f8ad3bb87664

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang=en>
 <head>
-<meta name=generator content="Hugo 0.89.4">
+<meta name=generator content="Hugo 0.91.2">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <title>🪄 Technical Sourcery</title><link rel=apple-touch-icon href=https://www.technicalsourcery.net/images/icons/icon-180x180.png sizes=180x180>
@@ -169,6 +169,22 @@ Github
 <div class=col-lg-8>
 <div class=container><div class="posts mb-4"><article class="row card post component">
 <div class=card-body>
+<h2 class="card-title post-title"><a href=https://www.technicalsourcery.net/posts/qr-superpowers/>Giving QR Codes Superpowers
+</a></h2><div class=post-meta>
+<span class=post-date title="created on 2022-01-06 11:10:21 +0000 UTC.">
+Jan 6, 2022
+</span><span class=post-reading-time>
+6 min read
+</span><span class=post-taxonomies><a href=https://www.technicalsourcery.net/categories/encoding/ class="badge rounded-pill post-taxonomy">encoding</a><a href=https://www.technicalsourcery.net/tags/encoding/ class="badge rounded-pill post-taxonomy">encoding</a><a href=https://www.technicalsourcery.net/tags/qr-code/ class="badge rounded-pill post-taxonomy">qr-code</a></span>
+</div>
+<div class=post-summary>
+<img class=img-fluid alt="Giving QR codes superpowers" src=https://www.technicalsourcery.net/images/thumbnails/qr-superpowers.png loading=lazy width=600 height=600>
+QR codes have replaced bar codes in many places because they can store a lot more information, but this advantage is limited by the fact that they can only store textual data and have no inherent structure. In this post, I&rsquo;ll demonstrate how to overcome these limitations and give QR codes superpowers!
+QR Codes …
+</div>
+</div>
+</article><article class="row card post component">
+<div class=card-body>
 <h2 class="card-title post-title"><a href=https://www.technicalsourcery.net/posts/nixos-in-libvirt/>Test-Driving a NixOS VM Using Libvirt
 </a></h2><div class=post-meta>
 <span class=post-date title="created on 2021-08-01 13:11:43 +0000 UTC.">
@@ -231,32 +247,16 @@ Have you ever wanted a persistent Linux virtual desktop that you could host anyw
 I like having deterministic work environments. Disaster recovery becomes a cinch when you can just destroy and rebuild your desktop container, map your home …
 </div>
 </div>
-</article><article class="row card post component">
-<div class=card-body>
-<h2 class="card-title post-title"><a href=https://www.technicalsourcery.net/posts/intro-high-availability/>Introduction to High Availability
-</a></h2><div class=post-meta>
-<span class=post-date title="created on 2019-04-01 16:16:47 +0000 UTC.">
-Apr 1, 2019
-</span><span class=post-reading-time>
-4 min read
-</span><span class=post-taxonomies><a href=https://www.technicalsourcery.net/categories/high-availability/ class="badge rounded-pill post-taxonomy">high-availability</a><a href=https://www.technicalsourcery.net/tags/high-availability/ class="badge rounded-pill post-taxonomy">high-availability</a></span>
-</div>
-<div class=post-summary>
-<img class=img-fluid alt="Introduction to High Availability" src=https://www.technicalsourcery.net/images/thumbnails/high-availability.jpg loading=lazy width=600 height=402>
-How important is uptime to you? How bad would it be if your services went down for 10 seconds? 10 minutes? 10 hours? 10 days? Every system has its breaking point, where the consequences become so severe that heads start rolling.
-Once the breaking point for downtime is shorter than your worst-case time for fixing …
-</div>
-</div>
 </article></div><div class="row table-responsive mb-3">
 <ul class="pagination pagination-default">
 <li class="page-item disabled">
-<a href=# aria-disabled=true aria-label=First class=page-link role=button tabindex=-1><span aria-hidden=true>&#171;&#171;</span></a>
+<a aria-disabled=true aria-label=First class=page-link role=button tabindex=-1><span aria-hidden=true>&#171;&#171;</span></a>
 </li>
 <li class="page-item disabled">
-<a href=# aria-disabled=true aria-label=Previous class=page-link role=button tabindex=-1><span aria-hidden=true>&#171;</span></a>
+<a aria-disabled=true aria-label=Previous class=page-link role=button tabindex=-1><span aria-hidden=true>&#171;</span></a>
 </li>
 <li class="page-item active">
-<a href=# aria-current=page aria-label="Page 1" class=page-link role=button>1</a>
+<a aria-current=page aria-label="Page 1" class=page-link role=button>1</a>
 </li>
 <li class=page-item>
 <a href=/page/2/ aria-label="Page 2" class=page-link role=button>2</a>
@@ -281,11 +281,11 @@ Once the breaking point for downtime is shorter than your worst-case time for fi
 <section class="recent-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Recent Posts</h2>
-<ul class=post-list><li><a href=https://www.technicalsourcery.net/posts/nixos-in-libvirt/>Test-Driving a NixOS VM Using Libvirt
+<ul class=post-list><li><a href=https://www.technicalsourcery.net/posts/qr-superpowers/>Giving QR Codes Superpowers
+</a></li><li><a href=https://www.technicalsourcery.net/posts/nixos-in-libvirt/>Test-Driving a NixOS VM Using Libvirt
 </a></li><li><a href=https://www.technicalsourcery.net/posts/on-endianness/>On Endianness
 </a></li><li><a href=https://www.technicalsourcery.net/posts/line-lengths/>Line Lengths
 </a></li><li><a href=https://www.technicalsourcery.net/posts/virtual-linux-remote-desktop/>Virtual Linux Remote Desktop
-</a></li><li><a href=https://www.technicalsourcery.net/posts/intro-high-availability/>Introduction to High Availability
 </a></li></ul>
 </div>
 </section><section class="taxonomies row card component">
@@ -293,7 +293,9 @@ Once the breaking point for downtime is shorter than your worst-case time for fi
 <h2 class=card-title>
 <a href=https://www.technicalsourcery.net/categories>Categories</a>
 </h2>
-<div class=py-2><a href=https://www.technicalsourcery.net/categories/endianness/ class="badge rounded post-taxonomy" title=endianness>
+<div class=py-2><a href=https://www.technicalsourcery.net/categories/encoding/ class="badge rounded post-taxonomy" title=encoding>
+encoding
+</a><a href=https://www.technicalsourcery.net/categories/endianness/ class="badge rounded post-taxonomy" title=endianness>
 endianness
 </a><a href=https://www.technicalsourcery.net/categories/high-availability/ class="badge rounded post-taxonomy" title=high-availability>
 high-availability
@@ -312,7 +314,9 @@ virtualization
 <h2 class=card-title>
 <a href=https://www.technicalsourcery.net/tags>Tags</a>
 </h2>
-<div class=py-2><a href=https://www.technicalsourcery.net/tags/endianness/ class="badge rounded post-taxonomy" title=endianness>
+<div class=py-2><a href=https://www.technicalsourcery.net/tags/encoding/ class="badge rounded post-taxonomy" title=encoding>
+encoding
+</a><a href=https://www.technicalsourcery.net/tags/endianness/ class="badge rounded post-taxonomy" title=endianness>
 endianness
 </a><a href=https://www.technicalsourcery.net/tags/headless/ class="badge rounded post-taxonomy" title=headless>
 headless
@@ -326,12 +330,10 @@ linux
 nixos
 </a><a href=https://www.technicalsourcery.net/tags/programming/ class="badge rounded post-taxonomy" title=programming>
 programming
+</a><a href=https://www.technicalsourcery.net/tags/qr-code/ class="badge rounded post-taxonomy" title=qr-code>
+qr-code
 </a><a href=https://www.technicalsourcery.net/tags/remote-desktop/ class="badge rounded post-taxonomy" title=remote-desktop>
 remote-desktop
-</a><a href=https://www.technicalsourcery.net/tags/time/ class="badge rounded post-taxonomy" title=time>
-time
-</a><a href=https://www.technicalsourcery.net/tags/timezone/ class="badge rounded post-taxonomy" title=timezone>
-timezone
 </a></div>
 </div>
 </section>
@@ -348,7 +350,7 @@ timezone
 <i class="fas fa-fw fa-2x fa-rss"></i>
 </a></nav>
 <div class="copyright mb-2">
-Copyright © 2018-2021 Karl Stenerud. All Rights Reserved.
+Copyright © 2018-2022 Karl Stenerud. All Rights Reserved.
 </div>
 <div class="powered-by mb-2">
 Powered by <a href=https://gohugo.io target=_blank rel="noopener noreferrer">Hugo</a> and the <a href=https://github.com/razonyang/hugo-theme-bootstrap target=_blank rel="noopener noreferrer">Bootstrap</a> theme.
@@ -356,6 +358,6 @@ Powered by <a href=https://gohugo.io target=_blank rel="noopener noreferrer">Hug
 <img src=https://www.netlify.com/img/global/badges/netlify-color-accent.svg alt="Deploys by Netlify">
 </a>
 </footer>
-<script src=https://www.technicalsourcery.net/js/bundle.min.c9a2705a4f7960fa93b78fcbd45bced560cf3993d862169dec489d9a4ba3b97e.js integrity="sha256-yaJwWk95YPqTt4/L1FvO1WDPOZPYYhad7EidmkujuX4=" crossorigin=anonymous defer></script><script>'serviceWorker'in navigator&&window.addEventListener('load',()=>{navigator.serviceWorker.register('https://www.technicalsourcery.net/service-worker.js').then(function(a){console.log('Successfully registered service worker',a)}).catch(function(a){console.warn('Error whilst registering service worker',a)})})</script>
+<script src=https://www.technicalsourcery.net/js/bundle.min.79ffd22b8c9cb2390073fcc3826d041b2b898e3b7e4f7ddff39fb4b0ca8f4731.js integrity="sha256-ef/SK4ycsjkAc/zDgm0EGyuJjjt+T33f85+0sMqPRzE=" crossorigin=anonymous defer></script><script>'serviceWorker'in navigator&&window.addEventListener('load',()=>{navigator.serviceWorker.register('https://www.technicalsourcery.net/service-worker.js').then(function(a){console.log('Successfully registered service worker',a)}).catch(function(a){console.warn('Error whilst registering service worker',a)})})</script>
 </body>
 </html>
