--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@ Github
 Jan 6, 2022
 </span><span class=post-reading-time>
 7 min read
-</span><span class=post-taxonomies><a href=https://www.technicalsourcery.net/categories/encoding/ class="badge rounded-pill post-taxonomy">encoding</a><a href=https://www.technicalsourcery.net/tags/encoding/ class="badge rounded-pill post-taxonomy">encoding</a><a href=https://www.technicalsourcery.net/tags/qr-code/ class="badge rounded-pill post-taxonomy">qr-code</a><a href=https://www.technicalsourcery.net/tags/concise-encoding/ class="badge rounded-pill post-taxonomy">concise-encoding</a></span>
+</span><span class=post-taxonomies><a href=https://www.technicalsourcery.net/categories/encoding/ class="badge rounded-pill post-taxonomy">encoding</a><a href=https://www.technicalsourcery.net/tags/encoding/ class="badge rounded-pill post-taxonomy">encoding</a><a href=https://www.technicalsourcery.net/tags/qr-code/ class="badge rounded-pill post-taxonomy">qr-code</a><a href=https://www.technicalsourcery.net/tags/binary/ class="badge rounded-pill post-taxonomy">binary</a><a href=https://www.technicalsourcery.net/tags/structured-data/ class="badge rounded-pill post-taxonomy">structured-data</a><a href=https://www.technicalsourcery.net/tags/concise-encoding/ class="badge rounded-pill post-taxonomy">concise-encoding</a></span>
 </div>
 <div class=post-summary>
 <img class=img-fluid alt="Giving QR codes superpowers" src=https://www.technicalsourcery.net/images/thumbnails/qr-superpowers.png loading=lazy width=600 height=600>
-QR codes have replaced bar codes in many places because they can store a lot more information, but this advantage is limited by the fact that they can only store textual data and have no inherent structure. In this post, I&rsquo;ll demonstrate how to overcome these limitations and give QR codes superpowers!
-QR Codes …
+QR codes are popular because they can store more information than bar codes, but they can&rsquo;t store binary data and have no inherent structure. In this post, I&rsquo;ll show how to overcome these limitations and give QR codes superpowers!
+QR Codes and Their Limitations QR codes were invented by the Japanese company …
 </div>
 </div>
 </article><article class="row card post component">
@@ -314,7 +314,9 @@ virtualization
 <h2 class=card-title>
 <a href=https://www.technicalsourcery.net/tags>Tags</a>
 </h2>
-<div class=py-2><a href=https://www.technicalsourcery.net/tags/concise-encoding/ class="badge rounded post-taxonomy" title=concise-encoding>
+<div class=py-2><a href=https://www.technicalsourcery.net/tags/binary/ class="badge rounded post-taxonomy" title=binary>
+binary
+</a><a href=https://www.technicalsourcery.net/tags/concise-encoding/ class="badge rounded post-taxonomy" title=concise-encoding>
 concise-encoding
 </a><a href=https://www.technicalsourcery.net/tags/encoding/ class="badge rounded post-taxonomy" title=encoding>
 encoding
@@ -332,8 +334,6 @@ linux
 nixos
 </a><a href=https://www.technicalsourcery.net/tags/programming/ class="badge rounded post-taxonomy" title=programming>
 programming
-</a><a href=https://www.technicalsourcery.net/tags/qr-code/ class="badge rounded post-taxonomy" title=qr-code>
-qr-code
 </a></div>
 </div>
 </section>
