deploy: 33878c55b1c96f7334cab1fa242fa1e8de58402b

--- a/fr/search/index.html
+++ b/fr/search/index.html
@@ -7,15 +7,16 @@
 <link rel=icon href=https://www.technicalsourcery.net/images/icons/icon-16x16.png sizes=16x16 type=image/png>
 <link rel=icon href=https://www.technicalsourcery.net/images/icons/favicon.ico>
 <link rel=manifest href=https://www.technicalsourcery.net/fr/manifest.json>
-<meta name=keywords content="Hugo,Bootstrap,Blog Theme">
-<meta name=description content="An extreme fast, responsive and feature-rich blog theme for Hugo"><meta itemprop=name content="Recherche">
-<meta itemprop=description content="An extreme fast, responsive and feature-rich blog theme for Hugo"><meta property="og:title" content="Recherche">
-<meta property="og:description" content="An extreme fast, responsive and feature-rich blog theme for Hugo">
+<meta name=keywords content="blog,programming,data-format,low-level,data-communications,bare-metal">
+<meta name=description content="Delving deep into the technical arts"><meta itemprop=name content="Recherche">
+<meta itemprop=description content="Delving deep into the technical arts"><meta property="og:title" content="Recherche">
+<meta property="og:description" content="Delving deep into the technical arts">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://www.technicalsourcery.net/fr/search/">
-<meta name=twitter:card content="summary">
+<meta property="og:url" content="https://www.technicalsourcery.net/fr/search/"><meta property="og:image" content="https://www.technicalsourcery.net/images/site-feature-image.jpg">
+<meta name=twitter:card content="summary_large_image">
+<meta name=twitter:image content="https://www.technicalsourcery.net/images/site-feature-image.jpg">
 <meta name=twitter:title content="Recherche">
-<meta name=twitter:description content="An extreme fast, responsive and feature-rich blog theme for Hugo">
+<meta name=twitter:description content="Delving deep into the technical arts">
 <meta name=robots content="index, follow"><link rel=alternate type=application/rss+xml href=https://www.technicalsourcery.net/fr/search/index.xml title="🪄 Technical Sourcery"><meta data-name=search-index content="https://www.technicalsourcery.net/fr/index.json"><link rel=stylesheet href=https://www.technicalsourcery.net/css/bundle.min.adafd81624e28648439656f4aeba9adda4e7586da003efb5780ca8cec9292a9a.css integrity="sha256-ra/YFiTihkhDllb0rrqa3aTnWG2gA++1eAyozskpKpo=" crossorigin=anonymous>
 <noscript><link rel=stylesheet href=https://www.technicalsourcery.net/css/bundle.min.adafd81624e28648439656f4aeba9adda4e7586da003efb5780ca8cec9292a9a.css integrity="sha256-ra/YFiTihkhDllb0rrqa3aTnWG2gA++1eAyozskpKpo=" crossorigin=anonymous></noscript><script>window.searchResultContentWordCount=parseInt('240'),window.searchPaginate=parseInt('5'),window.fuseOptions=JSON.parse('{\u0022ignoreLocation\u0022:true,\u0022includeMatches\u0022:true,\u0022includeScore\u0022:true,\u0022keys\u0022:[{\u0022name\u0022:\u0022title\u0022,\u0022weight\u0022:0.8},{\u0022name\u0022:\u0022content\u0022,\u0022weight\u0022:0.5},{\u0022name\u0022:\u0022tags\u0022,\u0022weight\u0022:0.3},{\u0022name\u0022:\u0022categories\u0022,\u0022weight\u0022:0.3},{\u0022name\u0022:\u0022series\u0022,\u0022weight\u0022:0.3}],\u0022threshold\u0022:0.1}')</script><script src=https://www.technicalsourcery.net/js/search.9d45cc354ec4285b6679550b6770f2d2fe8fb806891cc72eb644e12e7deb1ca1.js integrity="sha256-nUXMNU7EKFtmeVULZ3Dy0v6PuAaJHMcutkThLn3rHKE=" crossorigin=anonymous></script>
 </head>
