--- a/offline/index.html
+++ b/offline/index.html
@@ -10,12 +10,13 @@
 <meta name=keywords content>
 <meta name=description content><meta itemprop=name content="Offline">
 <meta itemprop=description content>
-<meta itemprop=wordCount content="0">
+<meta itemprop=wordCount content="0"><meta itemprop=image content="https://www.technicalsourcery.net/images/site-feature-image.jpg">
 <meta itemprop=keywords content><meta property="og:title" content="Offline">
 <meta property="og:description" content>
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://www.technicalsourcery.net/offline/"><meta property="article:section" content>
-<meta name=twitter:card content="summary">
+<meta property="og:url" content="https://www.technicalsourcery.net/offline/"><meta property="og:image" content="https://www.technicalsourcery.net/images/site-feature-image.jpg"><meta property="article:section" content>
+<meta name=twitter:card content="summary_large_image">
+<meta name=twitter:image content="https://www.technicalsourcery.net/images/site-feature-image.jpg">
 <meta name=twitter:title content="Offline">
 <meta name=twitter:description content>
 <meta name=robots content="index, follow"><link rel=stylesheet href=https://www.technicalsourcery.net/css/bundle.min.adafd81624e28648439656f4aeba9adda4e7586da003efb5780ca8cec9292a9a.css integrity="sha256-ra/YFiTihkhDllb0rrqa3aTnWG2gA++1eAyozskpKpo=" crossorigin=anonymous>
